--- a/.env
+++ b/.env
@@ -26,7 +26,8 @@ APP_SECRET=f3992b386338efcfb1d2e8fe62a21fe2
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/easy_quizz"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -39,3 +40,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> openai-php/symfony ###
+# Generate your own API credentials through the OpenAI Platform portal.
+# https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=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
+OPENAI_ORGANIZATION=
+###< openai-php/symfony ###
