--- a/.env
+++ b/.env
@@ -44,6 +44,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> openai-php/symfony ###
 # Generate your own API credentials through the OpenAI Platform portal.
 # https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=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
+OPENAI_API_KEY=YOUR KEY
 OPENAI_ORGANIZATION=
 ###< openai-php/symfony ###
